fixed account settings modal, fixed the theme of the floating text plugin, fixed the placeholder and fixed overflow on mobile devices

--- a/client/src/screens/NoteDetails/components/lexical/plugins/FloatingTextFormatToolbarPlugin/index.css
+++ b/client/src/screens/NoteDetails/components/lexical/plugins/FloatingTextFormatToolbarPlugin/index.css
@@ -1,6 +1,5 @@
 .floating-text-format-popup {
     display: flex;
-    background: #fff;
     padding: 2px;
     vertical-align: middle;
     position: absolute;
@@ -8,7 +7,7 @@
     left: 0;
     z-index: 10;
     opacity: 0;
-    background-color: #fff;
+    background-color: rgb(31 41 55);
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
     border-radius: 8px;
     transition: opacity 0.5s;
@@ -58,7 +57,7 @@
   }
   
   .floating-text-format-popup .popup-item:hover:not([disabled]) {
-    background-color: #eee;
+    background-color: rgb(17 24 39);
   }
   
   .floating-text-format-popup select.popup-item {
