--- a/client/src/screens/NoteDetails/components/lexical/ui/Placeholder.css
+++ b/client/src/screens/NoteDetails/components/lexical/ui/Placeholder.css
@@ -3,8 +3,8 @@
     position: absolute;
     text-overflow: ellipsis;
     width: 123px;
-    top: 196px;
-    left: 474px;
+    top: 178px;
+    left: 32px;
     right: 28px;
   }
   
